# docmaker

./: .gitignore  .venv-version  README.md  actions.py  config.old.py  config.py  docmaker.go  docmaker.ps1  docmaker.sh  doctpl.bat  doctpl.lnk  doctpl.sh  genexe.py  hello.py  laudo.docx  launcher.go  main.py  mypy.ini  pyproject.toml  repo.py  settings.py
docmaker/: __main__.py  app.py  config.py  docmodel.py  helpers.py  repo.py
docmaker/converters/: cpf_converter.py  date_converter.py  float_converter.py  int_converter.py  path_converter.py  pics_analyzer.py  string_list_converter.py
docmaker/doc_handler/: __init__.py  docx_handler.py  jinja_env_functions.py
docmaker/gui/: context_dialog.py  form.py  helpers.py  main_window.py
docmaker/macros/: docmaker.py  doctpl.py  link_macro.py
doctpl/: __init__.py  __main__.py  app.py  config.py  custom_types.py  docmodel.py  globals.py  helpers.py  render_info.py  renderer.py  repo.py  writer_handler.py
doctpl/converters/: __init__.py  cpf_converter.py  date_converter.py  float_converter.py  int_converter.py  path_converter.py  pics_analyzer.py  string_list_converter.py
doctpl/doc_handler/: __init__.py  docx_handler.py  jenv.py
doctpl/gui/: colors.py  context_dialog.py  form.py  helpers.py  main_window.py
doctpl/macros/: doctpl.py  link_macro.py
doctpl/secretary/: __init__.py  secretary.py
flask_app/: __init__.py  config.py  views.py
models/: __init__.py  common_widgets.py
models/base/: form.py  render.py  views.py
models/celular/: __init__.py  form.py  model.py
models/fotos_table/: __init__.py  model.py
models/laudo/: __init__.py  model.py
models/midia_otica/: __init__.py  model.py
models/objetos_celular/: __init__.py  model.py
models/templates/: .~lock.celular_objetos.odt#  .~lock.main_generic.odt#  celular_objetos.docx  celular_objetos.odt  historico_objetivos.html  main_generic.docx  main_generic.odt  midia_otica.docx  midia_otica.odt  ~$in_generic.docx
models/test/: __init__.py  form.py  main.odt  model.py  (+1 more)
(+80 files in other folders)
