[project]
name = "docmaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "bootstrap-flask>=2.4.0",
    "docxtpl>=0.18.0",
    "flask>=3.0.3",
    "jinja2>=3.1.4",
    "pdfminer-six>=20240706",
    "pillow>=10.4.0",
    "pydantic>=2.9.2",
    "pyside6>=6.7.2",
    "python-dotenv>=1.0.1",
    "pywin32>=306 ; platform_system == 'Windows'",
    "tinydb-serialization>=2.1.1",
    "tinydb>=4.8.0",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "types-beautifulsoup4>=4.12.0.20240907",
    "types-requests>=2.31.0.10",
]
